@@ -1,9 +1,14 @@
+2003-04-18  Martin Blom  <martin@blom.org>
+
+	* AHI: If no mode is available, the "Play a test sound" button is
+	disabled.
+
 2003-04-17  Martin Blom  <martin@blom.org>
+
+	* Ported AHI to AROS.
 
 	* The device and preference program are now endian aware when
 	reading IFF files.
-
-	* Ported AHI to AROS.
 
 2003-04-13  Martin Blom  <martin@blom.org>
 
